# dino-park-fence

./: .dockerignore  .gitignore  .travis.yml  Cargo.toml  Dockerfile  Dockerfile.local  LICENSE  README.md  buildspec.yml  do.sh  mise.toml  myke.yml
.github/workflows/: ci.yml  rust.yml
ci/: install_deps.sh
k8s/: Chart.yaml  values.yaml
k8s/templates/: deployment.yaml  gatekeeper.yaml  ingress-controller.yaml  ingress.yaml  ingress_pictures.yaml  oidc-proxy.yaml  public-splitter.yaml  router.yaml  service.yaml  wants-gatekeeper.yaml
k8s/values/: dev.yaml  prod.yaml  test.yaml
src/: config.rs  error.rs  healthz.rs  main.rs  metrics.rs  permissions.rs  proxy.rs  remote_store.rs  settings.rs
src/cis/: auth.rs  client.rs  config.rs  mod.rs  person_api.rs  secrets.rs
src/data/: timezones.json
src/graphql_api/: app.rs  avatar.rs  error.rs  input.rs  mod.rs  root.rs
src/orgchart/: app.rs
src/search/: app.rs
src/session/: app.rs
src/timezones/: app.rs
terraform/codebuild/: main.tf  provider.tf  variables.tf
terraform/dev/: provider.tf  ssm.tf
terraform/prod/: provider.tf  ssm.tf
terraform/test/: provider.tf  ssm.tf
tests/data/: fake_key.json
