[package]
name = "dino-park-fence"
version = "0.2.0"
authors = ["Florian Merz <me@fiji-flo.de>"]
edition = "2018"

[features]
default = []
localuserscope = ["dino_park_gate/localuserscope"]

[dependencies]
cis_client = { git = "https://github.com/mozilla-iam/cis_client-rust", branch = "0.8", version = "0.8", features = ["sync"]}
cis_profile = { git = "https://github.com/mozilla-iam/cis_profile-rust", branch = "0.5", version = "0.5", features = ["aws", "vendored", "graphql"] }
dino_park_gate = { git = "https://github.com/mozilla-iam/dino-park-gate", branch = "0.8.2", version = "0.8.2" }
dino_park_guard = { git = "https://github.com/mozilla-iam/dino-park-guard", branch = "0.3", version = "0.3" }
dino_park_trust = { git = "https://github.com/mozilla-iam/dino-park-trust", tag = "0.0.7", version = "0.0.7" }
actix-web = "3"
actix-rt = "1"
actix-http= "2"
juniper = "0.15"
juniper_actix = "0.2"
futures = "0.3"
log = "0.4"
env_logger = "0.8"
serde = "1.0.80"
serde_json = "1.0.32"
serde_derive = "1.0.80"
reqwest = { version = "0.10", features = ["json"] }
chrono = "0.4"
biscuit = "0.5"
percent-encoding = "2.1"
config = "0.10"
failure = "0.1"
url = "2.1"
prometheus = { version = "0.11", default-features = false }
time = "0.2"
# juniper_codegen breaks with syn 1.0.60 :/
syn = "= 1.0.59"

[dev-dependencies]
tokio = { version = "0.3", features = ["full"] }
