[package]
name = "dino-park-fence"
version = "0.2.1"
authors = ["Florian Merz <me@fiji-flo.de>"]
edition = "2018"

[features]
default = []
localuserscope = ["dino_park_gate/localuserscope"]

[dependencies]
cis_client = { git = "https://github.com/mozilla-iam/cis_client-rust", branch = "0.9", version = "0.9", features = ["sync"]}
cis_profile = { git = "https://github.com/mozilla-iam/cis_profile-rust", branch = "0.6", version = "0.6", features = ["aws", "vendored", "graphql"] }
dino_park_gate = { git = "https://github.com/mozilla-iam/dino-park-gate", tag = "0.9.4", version = "0.9.4" }
dino_park_guard = { git = "https://github.com/mozilla-iam/dino-park-guard", tag = "0.4.4", version = "0.4.4" }
dino_park_trust = { git = "https://github.com/mozilla-iam/dino-park-trust", tag = "0.1.0", version = "0.1.0" }
actix-web = "4"
actix-rt = "^2"
awc = "2.0.3"
cookie = "0.16"
juniper = "0.15"
juniper_actix = "0.4"
futures = "0.3"
log = "0.4"
env_logger = "0.8"
serde = "1.0.80"
serde_json = "1.0.32"
serde_derive = "1.0.80"
reqwest = { version = "0.10", features = ["json"] }
chrono = "0.4"
biscuit = "0.5"
percent-encoding = "2.1"
config = "0.10"
failure = "0.1"
url = "2.1"
prometheus = { version = "0.11", default-features = false }
time = "0.2"
syn = "= 1.0.98"

[dev-dependencies]
tokio = { version = "0.3", features = ["full"] }
